kubernetes_manifests/prometheus_grafana/ingress-rule-monitor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-grafana-ingress-rule
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: monitor-system.com
      http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090
    - host: monitor-system.com
      http:
        paths:
          - path: /alertmanager
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-alertmanager
                port:
                  number: 9093               
    - host: monitor-system.com
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service: 
                name: monitoring-grafana
                port:
                  number: 80
